# pyreflect

./: README.md  __init__.py  earthflatten.py  example_prem.py  example_regspaced.py  example_webservice.py  setup.cfg  setup.py
examples/: make_crustone.py  nd_to_ger.py  plot_velocity_model.py  simple.py
pyreflect/: __init__.py  earthflatten.py  earthmodel.py  gradient.py  momenttensor.py  specfile.py  stationmetadata.py  velocitymodel.py
src/pyreflect/: __init__.py  distaz.py  earthflatten.py  earthmodel.py  gradient.py  momenttensor.py  optionalutil.py  specfile.py  stationmetadata.py  velocitymodel.py
testing/readmspec/: example_prem.py  testreadmspec.py
