[metadata]
name = pyreflect
version = 0.0.5
author = Philip Crotwell
author_email = crotwell@seis.sc.edu
description = Python codes to work with George Randall's synthetic seismogram code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/crotwell/pyreflect
project_urls =
    Bug Tracker = https://github.com/crotwell/pyreflect/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: LGPL License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
pyreflect = data/*
